[package]
name = "dioxus-mosaic"
description = "Dioxus tiling window manager"
version = "0.1.0"
edition = "2024"
authors = ["Cole Brazinski <colepbrazinski@gmail.com>"]
license = "Apache 2"

[dependencies]
console_log = "1.0.0"
dioxus = { version = "0.6.0", features = [] }
log = "0.4.27"
web-sys = { version = "0.3.77", features = ["Window"] }
